--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   },
   "homepage": "https://github.com/HJ959/weather-project#readme",
   "dependencies": {
-    "node-fetch": "3.1.0"
+    "node-fetch": "^2.3.0"
   }
 }
